--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -59,12 +59,6 @@
     font-weight: 700;
 }
 
-@media (max-width: 768px) {
-    .bio-text p {
-        text-align: left;
-    }
-}
-
 .text-purple {
     color: var(--primary-color) !important;
     font-style: normal;
